FIx home "See all posts" align

--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -64,6 +64,7 @@
   .button-link{
     display: table;
     padding: 10px 30px;
+    margin: 0 auto;
   }
 }
 /* end/ home-posts */
